# vgm-downloader

./: .gitignore  pnpm-lock.yaml  pyproject.toml  tag.py  tag_num_ite.py  wxt.config.ts
entrypoints/: background.ts  content.ts
lab/: Untitled-1.ipynb
